# Qmix-ts-public

./: .gitignore  CHANGELOG.txt  CONTRIBUTING.md  README.md  package-lock.json  package.json  tsconfig.json
docs/: port-smithjj-styling-plan.md  swift-crystal-db-seed-entries.md  swift-port-black-box-tutorial.md  user-guide.md
fixtures/: crystal-info-golden.json  crystal-inline-info.json  qmix-biaxial-golden.json  qmix-comprehensive-golden.json  qmix-full-coverage-golden.json  qmix-golden.json  qpm-golden.json  transmission-golden.json
public/: compare.html  compare.standalone.html  custom.html  custom.standalone.html  index.html  index.standalone.html  qpm.html  qpm.standalone.html  refractive-index.html  refractive-index.standalone.html
public/styles/: qmix-shared.css
src/: cli.ts  index.ts  server.ts  standalone-entry.ts  tui.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/qmix/: crystal-db.ts  crystal-metadata.ts  engine.ts  format.ts  n12.ts  qpm.ts  types.ts  wavelengths.ts
test/: crystaldb-golden.test.ts  qmix-biaxial.test.ts  qmix-comprehensive.test.ts  qmix-full-coverage.test.ts  qmix-golden.test.ts  qpm-golden.test.ts
tools/: build-standalone.mjs  check-docs.mjs  compare_cbbf.ts  generate_crystal_info_fixture.mjs  make-standalone.py  prepare-public-repo.py  serve-docs.mjs
