[package]
name = "qmix-desktop"
version = "0.1.0"
description = "Qmix nonlinear crystal phase-matching desktop app"
authors = ["AS-Photonics"]
edition = "2021"

[lib]
name = "qmix_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
